add english translation

--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -280,10 +280,10 @@
           <img src="images/logo.svg">
         </figure>
         <figure class="footer-content__top-right">
-          <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-          <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+          <img src="images/fe-en.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+          <img src="images/rp-en.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
           <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-          <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+          <img src="images/logo-ue-en.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
         </figure>
       </div>
       <div class="footer-content__bottom">
