--- a/tenders.html
+++ b/tenders.html
@@ -126,10 +126,10 @@
     <section class="container">
       <div class="tenders__content">
         <div class="tenders-en__wrapper">
-          <img src="images/fe.svg" alt="" class="tenders-en__img tenders-en__img--1">
-          <img src="images/rp.svg" alt="" class="tenders-en__img tenders-en__img--2">
+          <img src="images/fe-en.svg" alt="" class="tenders-en__img tenders-en__img--1">
+          <img src="images/rp-en.svg" alt="" class="tenders-en__img tenders-en__img--2">
           <img src="images/pl.svg" alt="" class="tenders-en__img tenders-en__img--3">
-          <img src="images/logo-ue.svg" alt="" class="tenders-en__img tenders-en__img--4">
+          <img src="images/logo-ue-en.svg" alt="" class="tenders-en__img tenders-en__img--4">
         </div>
         <h2 class="tenders__title">Projekty realizowane przez 3N Solutions:</h2>
         <ul class="tenders__list">
@@ -149,10 +149,10 @@
             <img src="images/logo.svg">
           </figure>
           <figure class="footer-content__top-right">
-            <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-            <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+            <img src="images/fe-en.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+            <img src="images/rp-en.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
             <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-            <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+            <img src="images/logo-ue-en.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
           </figure>
         </div>
         <div class="footer-content__bottom">
