add english translation

--- a/after-fire-cleaning.html
+++ b/after-fire-cleaning.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content=" Metoda suchej mieszanki gazów, pozwala na 100% usunięcia sadzy z podzespołów">
-  <title>Najskuteczniejsze czyszczenie popożarowe 3n Solutions</title>
+  <title>After-fire cleaning  3N Solutions</title>
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="css/normalize.css">
