--- a/cleaning.html
+++ b/cleaning.html
@@ -135,7 +135,7 @@
       <section class="container">
       <div class="electrical__row electrical__row--1">
         <div class="electrical__col electrical__col--1">
-          <h2 class="electrical__col-title electrical__col-title--1">Cleaning of electrical appliances.</h2>
+          <h2 class="electrical__col-title electrical__col-title--1">Cleaning of electrical appliances</h2>
           <p class="electrical__col-text">The most effective cleaning technology for electrical devices available on the market. Thanks to the use of the dry gas method with a pressure not exceeding 0.5-1.5 bar, our cleaning process is non-invasive. We guarantee the safety of integrated circuits, because the mixture is completely dry, does not cause moisture, does not enter into physical or chemical reactions with the cleaned elements.</p>
         </div>
         <div class="electrical__col electrical__col--2">
@@ -198,7 +198,7 @@
             <li class="electrical__col-item electrical__col-item--bullet">Protection against the formation of an electric arc</li>
             <li class="electrical__col-item electrical__col-item--bullet">The technology does not destroy and does not damage electronic components</li>
             <li class="electrical__col-item electrical__col-item--bullet">Dirt is removed from all infrastructure - no hazardous contamination remaining</li>
-            <li class="electrical__col-item electrical__col-item--bullet">The technology is applicable and can be performed under voltage up to 1kv</li>
+            <li class="electrical__col-item electrical__col-item--bullet">The technology is applicable and can be performed under voltage up to 1kV</li>
             <li class="electrical__col-item electrical__col-item--bullet">The technique meets the EU safety standards and the most stringent environmental protection standards</li>
             <li class="electrical__col-item electrical__col-item--bullet">Qualified and experienced staff adapts to the most stringent health and safety and fire protection regulations</li>
           </ul>
@@ -211,7 +211,7 @@
           <div class="electrical__sub-row">
             <div class="electrical__col electrical__col--9">
               <h3 class="electrical__col-title electrical__col-title--5">Prevention</h3>
-              <p class="electrical__col-text">The unique properties of the method ensure fully effective and safe cleaning of electrical components, including</p>
+              <p class="electrical__col-text">The unique properties of the method ensure fully effective and safe cleaning of electrical components, including:</p>
               <ul class="electrical__col-list">
                 <li class="electrical__col-item">Power and control electrical switchboards</li>
                 <li class="electrical__col-item">Ceramic and composite insulators</li>
