--- a/hydrodynamic-cleaning-2.html
+++ b/hydrodynamic-cleaning-2.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Czyszczenie hydrodynamiczne 3n Solutions</title>
+  <title>Thermovision and electrical measurements 3n Solutions</title>
 
   <!-- Google Fonts -->
 
@@ -42,7 +42,7 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
                     <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
@@ -163,10 +163,9 @@
               <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Cleaning of reactors, 
                 boilers</div>
               <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Cleaning of industrial 
-                installations, floors and floors</div>
+                installations, floors</div>
               <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Cleaning during 
-                planned 
-                renovations</div>
+                planned renovations</div>
             </div>
             <div class="hydrodynamic__row-wrap">
               <div class="hydrodynamic__col hydrodynamic__col--3">
@@ -178,7 +177,7 @@
               </div>
               <div class="hydrodynamic__col hydrodynamic__col--4">
                 <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Construction renovation</h3>
-                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard.We will provide you with, among others, cleaning and painting services for steel structures.</p>
+                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard. We will provide you with, among others, cleaning and painting services for steel structures.</p>
               </div>
             </div>
           </div>
