--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -162,10 +162,9 @@
               <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Cleaning of reactors, 
                 boilers</div>
               <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Cleaning of industrial 
-                installations, floors and floors</div>
+                installations, floors</div>
               <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Cleaning during 
-                planned 
-                renovations</div>
+                planned renovations</div>
             </div>
             <div class="hydrodynamic__row-wrap">
               <div class="hydrodynamic__col hydrodynamic__col--3">
@@ -177,7 +176,7 @@
               </div>
               <div class="hydrodynamic__col hydrodynamic__col--4">
                 <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Construction renovation</h3>
-                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard.We will provide you with, among others, cleaning and painting services for steel structures.</p>
+                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard. We will provide you with, among others, cleaning and painting services for steel structures.</p>
               </div>
             </div>
           </div>
