--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <figure class="main__boxes-box__icon main__boxes-box__icon--bad">
               <img src="images/badge.svg" alt="bezpieczeństwo">
             </figure>
-            <p class="main__boxes-box__text main__boxes-box__text--3">The most effective cleaning technology for electrical devices available on the market. Our technology is based on an innovative cleaning medium which consist of the unique gas mixture with a pressure not exceeding 0.5-1.5 bar</p>
+            <p class="main__boxes-box__text main__boxes-box__text--3">The most effective cleaning technology for electrical devices available on the market. Our technology is based on an innovative cleaning medium which consist of the unique gas mixture with a pressure not exceeding 0.5-1.5 bar.</p>
           </div>
         </div>
       </div>
