--- a/tenders.html
+++ b/tenders.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>3N Solutions - Przetargi</title>
+  <title>Tenders 3n Solutions</title>
 
   <!-- Google Fonts -->
 
@@ -131,7 +131,7 @@
           <img src="images/pl.svg" alt="" class="tenders-en__img tenders-en__img--3">
           <img src="images/logo-ue-en.svg" alt="" class="tenders-en__img tenders-en__img--4">
         </div>
-        <h2 class="tenders__title">Projekty realizowane przez 3N Solutions:</h2>
+        <h2 class="tenders__title">Projects implemented by 3N Solutions:</h2>
         <ul class="tenders__list">
           <li class="tenders__item"><a href="tenders--ue-1-en.html" class="tenders__link tenders__link--1">Increasing company’s competitiveness by promoting 3N Solutions brand on the international market</a></li>
           <li class="tenders__item"><span class="tenders__link tenders__link--4">The development of innovalive MVC technology (medium voltage cleaning) for power units cleaning at medium voltage up to 60kV</span></li>
