--- a/thermovision.html
+++ b/thermovision.html
@@ -147,10 +147,9 @@
       </div>
 
       <div class="measurements__row measurements__row--2">
-        <p class="measurements__row-text measurements__row-text--1">The performed measurements identify places of potential failures, 
-          giving the opportunity to plan an effective process of device maintenance. 
-          As part of our services, we also offer the ability to perform measurements 
-          after equipment maintenance to assess the effectiveness of performed maintenance work.</p>
+        <p class="measurements__row-text measurements__row-text--1">The performed measurements identify places of potential failures, giving the opportunity to plan
+          an effective process of device maintenance. As part of our services, we also offer the ability to perform
+          measurements after equipment maintenance to assess the effectiveness of performed maintenance work.</p>
       </div>
 
       <div class="measurements__row measurements__row--3">
