--- a/tenders--ue-1-en.html
+++ b/tenders--ue-1-en.html
@@ -29,6 +29,10 @@
             <a href="index.html" class="logo__link">
               <img src="images/logo.svg" class="logo__img" alt="3ns logo"></a>
           </div>
+          <div class="lang">
+            <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl">PL</a>
+            <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en">EN</a>
+          </div>
           <button class="btn-toggle" id="btnToggle" aria-label="Open / Close Menu">
             <div class="hamburger-container">
               <div class="hamburger">
@@ -94,6 +98,11 @@
                 <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="menu__link--yt js-anchor--link"><i class="fab fa-youtube"></i>
                 </a>
                 <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="menu__link--in js-anchor--link"><i class="fab fa-linkedin "></i></a>
+              </li>
+
+              <li class="menu__item menu__item--lang">
+                <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl js-anchor--link">PL</a>
+                <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en js-anchor--link">EN</a>
               </li>
 
               <li class="menu__item menu__item--color">
