--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -329,8 +329,7 @@
             00-819 Warszawa
           </div>
           <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-            <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-              KRS: 0000257515, District Court for the Capital City of
+            <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
               Warsaw, XII Commercial Division of the National
               Court Register NIP: 5213388077, REGON: 140555502
               Share capital: PLN 50,000 (paid up in full)</span>
