--- a/index.html
+++ b/index.html
@@ -696,12 +696,12 @@
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+                <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,
                 00-819 Warszawa
               </span>
               </div>
@@ -717,12 +717,11 @@
           </div>
           <div class="footer-content__bottom-right">
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
               00-819 Warszawa
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-              <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                KRS: 0000257515, District Court for the Capital City of
+              <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
                 Warsaw, XII Commercial Division of the National
                 Court Register NIP: 5213388077, REGON: 140555502
                 Share capital: PLN 50,000 (paid up in full)</span>
