--- a/contact.html
+++ b/contact.html
@@ -149,15 +149,15 @@
 
               <div class="contact__details-email">
                 <a href="mailto:biuro@3ns.com.pl" class="contact__details-email__anchor">
-                  <img src="images/envelope.svg" class="contact__details-email__img contact__details-email__img--2" alt="email"></a>
-                <span class="contact__details-email__text">biuro@3ns.com.pl</span>
+                  <img src="images/envelope.svg" class="contact__details-email__img contact__details-email__img--2" alt="email">
+                  <span class="contact__details-email__text">biuro@3ns.com.pl</span></a>
               </div>
 
               <div class="contact__details-phone">
                 <a href="tel:+48 22 233 00 50" class="contact__details-phone__anchor contact__details-phone--1">
                                   <img src="images/smartphone.svg" class="contact__details-phone__anchor contact__details-phone__img" alt="mobile">
+                  <span class="contact__details-phone__text">+48 22 233 00 50</span>
                 </a>
-                <span class="contact__details-phone__text">+48 22 233 00 50</span>
               </div>
             </div>
             <div class="contact__details-wrap contact__details-wrap--2">
@@ -165,16 +165,16 @@
                 <h4 class="contact__details-address__title">Sales Office</h4>
                 <div class="contact__details-address__content">
                   <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="contact__details-address__content-anchor">
-                    <img src="images/map.svg" class="contact__details-address__content-img" alt="email"></a>
-                  <span class="contact__details-address__content-text">ul. Szeligowska 40a,
-                01-320 Warszawa</span>
+                    <img src="images/map.svg" class="contact__details-address__content-img" alt="email">
+                    <span class="contact__details-address__content-text">Szeligowska St. 40a,
+                01-320 Warszawa</span></a>
                 </div>
               </div>
               <div class="contact__details-address contact__details-address--2">
                 <h4 class="contact__details-address__title">Headquarters</h4>
 
 
-                <span class="contact__details-address__text">ul. Złota 61/100,
+                <span class="contact__details-address__text">Złota St. 61/100,
                 00-819 Warszawa</span>
               </div>
             </div>
@@ -260,12 +260,12 @@
               <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
                 <div class="footer-content__bottom-left__details-wrap">
                   <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                  <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+                  <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40 a
                   01-320 Warszawa</span>
                 </div>
                 <div class="footer-content__bottom-left__details-wrap">
                   <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                  <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+                  <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,
                   00-819 Warszawa
                 </span>
                 </div>
@@ -281,7 +281,7 @@
             </div>
             <div class="footer-content__bottom-right">
               <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-                <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+                <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
                 00-819 Warszawa
               </div>
               <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
