--- a/tenders.html
+++ b/tenders.html
@@ -174,12 +174,12 @@
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+                <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,
                 00-819 Warszawa
               </span>
               </div>
@@ -195,7 +195,7 @@
           </div>
           <div class="footer-content__bottom-right">
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
               00-819 Warszawa
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
