--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
               <img src="images/logo.svg" class="logo__img" alt="3ns logo"></a>
           </div>
           <div class="lang">
-            <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl">PL</a>
+            <a href="https://www.3ns.com.pl/kontakt.html" class="lang__link lang__link--pl">PL</a>
             <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en">EN</a>
           </div>
           <button class="btn-toggle" id="btnToggle" aria-label="Open / Close Menu">
@@ -99,7 +99,7 @@
               </li>
 
               <li class="menu__item menu__item--lang">
-                <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl js-anchor--link">PL</a>
+                <a href="https://www.3ns.com.pl/kontakt.html" class="lang__link lang__link--pl js-anchor--link">PL</a>
                 <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en js-anchor--link">EN</a>
               </li>
 
