--- a/maintenance.html
+++ b/maintenance.html
@@ -29,8 +29,8 @@
               <img src="images/logo.svg" class="logo__img" alt="3ns logo"></a>
           </div>
           <div class="lang">
-            <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl">PL</a>
-            <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en">EN</a>
+            <a href="https://www.3ns.com.pl/konserwacja.html" class="lang__link lang__link--pl">PL</a>
+            <a href="https://www.3ns.com.pl/en/maintenance.html" class="lang__link lang__link--en">EN</a>
           </div>
           <button class="btn-toggle" id="btnToggle" aria-label="Open / Close Menu">
             <div class="hamburger-container">
@@ -100,8 +100,8 @@
               </li>
 
               <li class="menu__item menu__item--lang">
-                <a href="https://www.3ns.com.pl/" class="lang__link lang__link--pl js-anchor--link">PL</a>
-                <a href="https://www.3ns.com.pl/en/index.html" class="lang__link lang__link--en js-anchor--link">EN</a>
+                <a href="https://www.3ns.com.pl/konserwacja.html" class="lang__link lang__link--pl js-anchor--link">PL</a>
+                <a href="https://www.3ns.com.pl/en/maintenance.html" class="lang__link lang__link--en js-anchor--link">EN</a>
               </li>
 
               <li class="menu__item menu__item--color">
