--- a/tenders--ue-1-en.html
+++ b/tenders--ue-1-en.html
@@ -141,7 +141,6 @@
           <img src="images/logo-ue-en.svg" alt="" class="tenders-en__img tenders-en__img--4">
         </div>
         <div class="tenders__subpage">
-          <a href="https://www.3ns.com.pl/doc/3NSOLUTIONS_ULOTKA_A5.pdf" target="_blank" class="tenders__subpage-anchor tenders__subpage-anchor--en">Download Leaflet</a>
           <p class="tenders__subpage-text">
             3N SOLUTIONS SPÓŁKA Z OGRANICZONĄ ODPOWIEDZIALNOŚCIĄ is implementing a project named <span class="tenders__subpage-text--bold">Increasing company’s competitiveness by promoting 3N Solutions brand on the international market’</span>
   
@@ -157,6 +156,8 @@
   
             <span class="tenders__subpage-text--underline">Contribution of European Funds: </span> PLN 415 575.00
           </p>
+          <a href="https://www.3ns.com.pl/doc/3NSOLUTIONS_ULOTKA_A5.pdf" target="_blank" class="tenders__subpage-anchor tenders__subpage-anchor--pl">
+            <img src="images/thumbnail-en.jpg" alt="" class="tenders__subpage-thumbnail"></a>
         </div>
       </div>
     </section>
@@ -187,7 +188,7 @@
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40 a
+                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
