--- a/hydrodynamic-cleaning-2.html
+++ b/hydrodynamic-cleaning-2.html
@@ -240,20 +240,34 @@
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
               <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
-              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
-              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
+              <a href="mailto:biuro@3ns.com.pl" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--1">
+                <img src="images/envelope.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--1" alt="email">
+                <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--1">biuro@3ns.com.pl</span></a>
+
+              <a href="tel:+48 22 233 00 50" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--2">
+                <img src="images/smartphone.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--2" alt="mobile">
+                <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--2">+48 22 233 00 50</span></a>
+<!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
+<!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a
-                01-320 Warszawa</span>
+                <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--3">
+                  <img src="images/map.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--3" alt="email">
+                  <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--1">Szeligowska St. 40a,
+                01-320 Warszawa</span></a>
+<!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
+<!--                01-320 Warszawa</span>-->
               </div>
               <div class="footer-content__bottom-left__details-wrap">
                 <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                <span class="footer-content__bottom-left__details-adress">Złota 61/100,
+                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--2">Złota St. 61/100,
                 00-819 Warszawa
               </span>
+<!--                <span class="footer-content__bottom-left__details-adress">Złota 61/100,-->
+<!--                00-819 Warszawa-->
+<!--              </span>-->
               </div>
             </div>
           </div>
