change in contact site

--- a/about-us.html
+++ b/about-us.html
@@ -290,28 +290,26 @@
               <a href="tel:+48 22 233 00 50" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--2">
                 <img src="images/smartphone.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--2" alt="mobile">
                 <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--2">+48 22 233 00 50</span></a>
-<!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
-<!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
+              <!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
+              <!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Headquarters</h4>
                 <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--3">
                   <img src="images/map.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--3" alt="email">
                   <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--1">Szeligowska St. 40a,
                 01-320 Warszawa</span></a>
-<!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
-<!--                01-320 Warszawa</span>-->
+
+                <!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
+                <!--                01-320 Warszawa</span>-->
               </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--2">Złota St. 61/100,
-                00-819 Warszawa
-              </span>
-<!--                <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,-->
-<!--                00-819 Warszawa-->
-<!--              </span>-->
-              </div>
+              <!--              <div class="footer-content__bottom-left__details-wrap">-->
+              <!--                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title&#45;&#45;3">Headquarters</h4>-->
+              <!--                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress&#45;&#45;2">Złota St. 61/100,-->
+              <!--                00-819 Warszawa-->
+              <!--              </span>-->
+              <!--              </div>-->
             </div>
           </div>
           <div class="footer-content__bottom-center">
@@ -324,8 +322,8 @@
           </div>
           <div class="footer-content__bottom-right">
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
-              00-819 Warszawa
+              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Szeligowska St. 40a
+              01-320 Warszawa
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
