--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -140,7 +140,7 @@
           <ul class="privacy-policy__list privacy-policy__list--1">
             <li class="privacy-policy__item privacy-policy__item--1">General provisions
               <ul class="privacy-policy__list privacy-policy__list--2">
-                <li class="privacy-policy__item privacy-policy__item--2">The Data Controller is <strong>3N Solutions Sp. z o.o.</strong> with its registered office in Warsaw, ul. Złota 61/100, 00-819 Warszawa, entered into the Register of Entrepreneurs of the National Court Register kept by the District Court for the Capital City of Warsaw in Warsaw, XII Commercial Division of the National Court Register under KRS No. KRS 0000257515, NIP: 5213388077, REGON: 140555502, e-mail address: <a href="mailto:marketing@3ns.com.pl" class="privacy-policy__anchor">marketing@3ns.com.pl</a>, tel. no.: +48 22 233 00 50 (further: "<strong>Controller</strong>").</li>
+                <li class="privacy-policy__item privacy-policy__item--2">The Data Controller is <strong>3N Solutions Sp. z o.o.</strong> with its registered office in Warsaw, Szeligowska St. 40a, 01-320 Warszawa, entered into the Register of Entrepreneurs of the National Court Register kept by the District Court for the Capital City of Warsaw in Warsaw, XII Commercial Division of the National Court Register under KRS No. KRS 0000257515, NIP: 5213388077, REGON: 140555502, e-mail address: <a href="mailto:marketing@3ns.com.pl" class="privacy-policy__anchor">marketing@3ns.com.pl</a>, tel. no.: +48 22 233 00 50 (further: "<strong>Controller</strong>").</li>
                 <li class="privacy-policy__item privacy-policy__item--2">This Privacy Policy lays down the rules of processing and protection of personal data acquired in connection with the use of the website available at: <a href="http://www.3ns.com.pl" target="_blank" class="privacy-policy__anchor">3ns.com.pl</a>(further: “Website”).</li>
                 <li class="privacy-policy__item privacy-policy__item--2">Personal data are processed by the Controller in accordance with governing provisions of the Polish and European law, including in particular in accordance with Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (OJ EU L No 119, p. 1, further: "<strong>GDPR</strong>"").</li>
                 <li class="privacy-policy__item privacy-policy__item--2">The use of the Website requires no registration on the part of the user and requires no transmission of any personal data. In connection with the use of the website, the Controller processes data about the user’s IP address, which are obtained automatically when the Controller’s Website is visited. The data are stored in the log file on the server. Such data are collected for technical reasons. Such data may be processed in combination with other personal data only if the user agrees to processing of their personal data or in cases prescribed by law.</li>
@@ -191,7 +191,7 @@
               <ul class="privacy-policy__list privacy-policy__list--9">
                 <li class="privacy-policy__item privacy-policy__item--2">Users may contact the Controller in matters concerning the personal data processed by the Controller:
                   <ul class="privacy-policy__list privacy-policy__list--10">
-                    <li class="privacy-policy__item privacy-policy__item--3">in writing, to the address of the Controller’s registered office, i.e. 3N Solutions sp. z o.o., ul. Złota 61/100, 00-819 Warszawa;</li>
+                    <li class="privacy-policy__item privacy-policy__item--3">in writing, to the address of the Controller’s registered office, i.e. 3N Solutions sp. z o.o., Szeligowska St. 40a, 01-320 Warszawa;</li>
                     <li class="privacy-policy__item privacy-policy__item--3">by e-mail, to: <a href="mailto:marketing@3ns.com.pl" class="privacy-policy__anchor">marketing@3ns.com.pl.</a> </li>
                   </ul>
                 </li>
@@ -247,28 +247,26 @@
               <a href="tel:+48 22 233 00 50" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--2">
                 <img src="images/smartphone.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--2" alt="mobile">
                 <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--2">+48 22 233 00 50</span></a>
-<!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
-<!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
+              <!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
+              <!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Headquarters</h4>
                 <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--3">
                   <img src="images/map.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--3" alt="email">
                   <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--1">Szeligowska St. 40a,
                 01-320 Warszawa</span></a>
-<!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
-<!--                01-320 Warszawa</span>-->
+
+                <!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
+                <!--                01-320 Warszawa</span>-->
               </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--2">Złota St. 61/100,
-                00-819 Warszawa
-              </span>
-<!--                <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,-->
-<!--                00-819 Warszawa-->
-<!--              </span>-->
-              </div>
+              <!--              <div class="footer-content__bottom-left__details-wrap">-->
+              <!--                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title&#45;&#45;3">Headquarters</h4>-->
+              <!--                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress&#45;&#45;2">Złota St. 61/100,-->
+              <!--                00-819 Warszawa-->
+              <!--              </span>-->
+              <!--              </div>-->
             </div>
           </div>
           <div class="footer-content__bottom-center">
@@ -281,8 +279,8 @@
           </div>
           <div class="footer-content__bottom-right">
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
-              00-819 Warszawa
+              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Szeligowska St. 40a
+              01-320 Warszawa
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
