--- a/after-fire-cleaning.html
+++ b/after-fire-cleaning.html
@@ -257,79 +257,77 @@
   <!-- end of fire-cleaning -->
 
   <!-- footer -->
-    <footer class="footer">
-      <section class="container">
-        <div class="footer-content">
-          <div class="footer-content__top">
-            <figure class="footer-content__top-left">
-              <img src="images/logo.svg">
-            </figure>
-            <figure class="footer-content__top-right">
-              <img src="images/fe-en.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-              <img src="images/rp-en.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
-              <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-              <img src="images/logo-ue-en.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
-            </figure>
-          </div>
-          <div class="footer-content__bottom">
-            <div class="footer-content__bottom-left">
-              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
-                <a href="mailto:biuro@3ns.com.pl" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--1">
-                  <img src="images/envelope.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--1" alt="email">
-                  <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--1">biuro@3ns.com.pl</span></a>
+  <footer class="footer">
+    <section class="container">
+      <div class="footer-content">
+        <div class="footer-content__top">
+          <figure class="footer-content__top-left">
+            <img src="images/logo.svg">
+          </figure>
+          <figure class="footer-content__top-right">
+            <img src="images/fe-en.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+            <img src="images/rp-en.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+            <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
+            <img src="images/logo-ue-en.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+          </figure>
+        </div>
+        <div class="footer-content__bottom">
+          <div class="footer-content__bottom-left">
+            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
+              <a href="mailto:biuro@3ns.com.pl" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--1">
+                <img src="images/envelope.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--1" alt="email">
+                <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--1">biuro@3ns.com.pl</span></a>
 
-                <a href="tel:+48 22 233 00 50" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--2">
-                  <img src="images/smartphone.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--2" alt="mobile">
-                  <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--2">+48 22 233 00 50</span></a>
-<!--                <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
-<!--                <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
-              </div>
-              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
-                <div class="footer-content__bottom-left__details-wrap">
-                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
-                  <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--3">
-                    <img src="images/map.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--3" alt="email">
-                    <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--1">Szeligowska St. 40a,
+              <a href="tel:+48 22 233 00 50" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--2">
+                <img src="images/smartphone.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--2" alt="mobile">
+                <span class="footer-content__bottom-left__details-text footer-content__bottom-left__details-text--2">+48 22 233 00 50</span></a>
+              <!--              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>-->
+              <!--              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>-->
+            </div>
+            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
+              <div class="footer-content__bottom-left__details-wrap">
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Headquarters</h4>
+                <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="footer-content__bottom-left__details-anchor footer-content__bottom-left__details-anchor--3">
+                  <img src="images/map.svg" class="footer-content__bottom-left__details-img footer-content__bottom-left__details-img--3" alt="email">
+                  <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--1">Szeligowska St. 40a,
                 01-320 Warszawa</span></a>
-<!--                  <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
-<!--                  01-320 Warszawa</span>-->
-                </div>
-                <div class="footer-content__bottom-left__details-wrap">
-                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
-                  <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress--2">Złota St. 61/100,
-                00-819 Warszawa
-              </span>
-<!--                  <span class="footer-content__bottom-left__details-adress">Złota St. 61/100,-->
-<!--                  00-819 Warszawa-->
-<!--                </span>-->
-                </div>
+
+                <!--                <span class="footer-content__bottom-left__details-adress">Szeligowska St. 40a-->
+                <!--                01-320 Warszawa</span>-->
               </div>
+              <!--              <div class="footer-content__bottom-left__details-wrap">-->
+              <!--                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title&#45;&#45;3">Headquarters</h4>-->
+              <!--                <span class="footer-content__bottom-left__details-adress footer-content__bottom-left__details-adress&#45;&#45;2">Złota St. 61/100,-->
+              <!--                00-819 Warszawa-->
+              <!--              </span>-->
+              <!--              </div>-->
             </div>
-            <div class="footer-content__bottom-center">
-              <div class="footer-content__bottom-center__content">
-                <h4 class="footer-content__bottom-center__title">Find us</h4>
-                <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
-                </a>
-                <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
-              </div>
+          </div>
+          <div class="footer-content__bottom-center">
+            <div class="footer-content__bottom-center__content">
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
+              <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
+              </a>
+              <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
             </div>
-            <div class="footer-content__bottom-right">
-              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-                <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Złota street 61/100
-                00-819 Warszawa
-              </div>
-              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-                <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
-                  Warsaw, XII Commercial Division of the National
-                  Court Register NIP: 5213388077, REGON: 140555502
-                  Share capital: PLN 50,000 (paid up in full)</span>
-              </div>
+          </div>
+          <div class="footer-content__bottom-right">
+            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
+              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>Szeligowska St. 40a
+              01-320 Warszawa
+            </div>
+            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
+              <span class="footer-content__bottom-right__details-krs">KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
-      </section>
-    </footer>
+      </div>
+    </section>
+  </footer>
   <!-- end of footer -->
 </section>
 <!-- end of wrapper-->
